gcp-load-balancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcp-load-balancer # kpt-set: ${name}
  annotations:
    kubernetes.io/ingress.class: gce
    # kubernetes.io/ingress.global-static-ip-name: ADDRESS_NAME # TODO config connecter to get static IP
    networking.gke.io/managed-certificates: gcp-load-balancer-managed-cert # kpt-set: ${name}-managed-cert
    networking.gke.io/v1beta1.FrontendConfig: http-to-https
  namespace: gcp-load-balancer
  labels:
    app: gcp-load-balancer # kpt-set: ${name}
    backstage.io/kubernetes-id: backstage-component-id
spec:
  defaultBackend:
    service:
      name: gcp-load-balancer # kpt-set: ${name}
      port:
        number: 80
